--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,15 @@
 body{
     overflow:hidden;
+    background: #212529
 }
 html{
-    background: url('bg.png');
-    background-size: cover;
-    background-position-y: 200px
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+main{
+    background: url(../images/bg.jpg);
+    min-height: 100vh;
+    padding-top: 40px
 }
 .App {
   text-align: center;
@@ -97,8 +102,11 @@ header .center-block{
       left: 0;
       width: 20px;
       height: 20px;
-      background: url(leaf.png) no-repeat;
+      background: url(../images/leaf.png);
       background-size: 100%;
       transform-style: preserve-3d;
       backface-visibility: visible;
     }
+.leaf-scene{
+    height: 150px;
+}
