--- a/src/css/ComicsList.css
+++ b/src/css/ComicsList.css
@@ -3,9 +3,16 @@
     z-index: 1;
     transform: skewX(-8deg);
     margin-bottom: 40px;
-    min-height: 350px
+    min-height: 350px;
+    padding: 20px 40px  150px 40px;
 }
-
+.tower{
+    background: url(../images/back-card.png) center 60%;
+}
+.desc{
+    text-shadow: #fff 1px 1px 0,#fff -1px -1px 0,#fff -1px 1px 0,#fff 1px -1px 0;
+    color: #50078f;
+}
 /*    Loading      */
 .cssload-thecube {
 	width: 200px;
