--- a/src/css/ComicsList.css
+++ b/src/css/ComicsList.css
@@ -9,6 +9,7 @@
 .tower{
     background: url(../images/back-card.png) center 60%;
 }
+.
 .desc{
     text-shadow: #fff 1px 1px 0,#fff -1px -1px 0,#fff -1px 1px 0,#fff 1px -1px 0;
     color: #50078f;
